# haskell-aligned

./: .gitignore  .travis.yml  Aligned.lhs  Makefile  aligned.cabal  aligned.md  aligned.nix  default.nix  deploy.sh  index.html  readme.md  shell.nix  stack.yaml
