name:                aligned
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Chris Martin
maintainer:          ch.martin@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.8 && <4.9
                     , transformers
  exposed-modules:     Aligned
  hs-source-dirs:      .
  default-language:    Haskell2010
